--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -74,6 +74,7 @@
         font-weight: bold;
         line-height: 140%;
         letter-spacing: 0.2px;
+        text-align: center;
       }
     </style>
   </head>
